// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`DateSeparator renders invalid date separator correctly 1`] = `
<DocumentFragment>
  <div
    aria-label="Invalid timestamp"
    class="_mx_TimelineSeparator_1o4vg_8"
    role="separator"
  >
    <hr
      role="none"
    />
    <div
      class="mx_DateSeparator_dateContent"
    >
      <h2
        aria-hidden="true"
        class="mx_DateSeparator_dateHeading"
      >
        Invalid timestamp
      </h2>
    </div>
    <hr
      role="none"
    />
  </div>
</DocumentFragment>
`;

exports[`DateSeparator renders the date separator correctly 1`] = `
<DocumentFragment>
  <div
    aria-label="today"
    class="_mx_TimelineSeparator_1o4vg_8"
    role="separator"
  >
    <hr
      role="none"
    />
    <div
      class="mx_DateSeparator_dateContent"
    >
      <h2
        aria-hidden="true"
        class="mx_DateSeparator_dateHeading"
      >
        today
      </h2>
    </div>
    <hr
      role="none"
    />
  </div>
</DocumentFragment>
`;

exports[`DateSeparator when feature_jump_to_date is enabled renders the date separator correctly 1`] = `
<DocumentFragment>
  <div
    aria-label="Fri, Dec 17, 2021"
    class="_mx_TimelineSeparator_1o4vg_8"
    role="separator"
  >
    <hr
      role="none"
    />
    <div
      aria-expanded="false"
      aria-haspopup="true"
      aria-label="Jump to date"
      class="mx_AccessibleButton mx_DateSeparator_jumpToDateMenu mx_DateSeparator_dateContent"
      data-testid="jump-to-date-separator-button"
      role="button"
      tabindex="0"
    >
      <h2
        aria-hidden="true"
        class="mx_DateSeparator_dateHeading"
      >
        Fri, Dec 17, 2021
      </h2>
      <svg
        class="mx_DateSeparator_chevron"
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 14.95q-.2 0-.375-.062a.9.9 0 0 1-.325-.213l-4.6-4.6a.95.95 0 0 1-.275-.7q0-.425.275-.7a.95.95 0 0 1 .7-.275q.425 0 .7.275l3.9 3.9 3.9-3.9a.95.95 0 0 1 .7-.275q.425 0 .7.275a.95.95 0 0 1 .275.7.95.95 0 0 1-.275.7l-4.6 4.6q-.15.15-.325.212a1.1 1.1 0 0 1-.375.063"
        />
      </svg>
    </div>
    <hr
      role="none"
    />
  </div>
</DocumentFragment>
`;
